# xdrgen

./: Main.hs  Makefile  Setup.hs  Test.hs  Test.lhs  Tests.hs  XDR.cabal
Data/XDR/: AST.hs  PPUtils.hs  Parser.hs  PrettyPrintC.hs  PrettyPrintJava.hs  PrettyPrintRpc.hs  PrettyPrinter.hs  PrettyTemplate.hs
